sarrac (2.19.12b5) unstable; urgency=medium

  * work-around for issue #71 (random occasional crash in cpump receiving v03 messages.)
  * improving some error messages.
  * bugfix Issue #85 when restarting a component if it wasn't running before, it would not restart. 

 -- Peter Silva <peter@blacklab>  Fri, 20 Dec 2019 21:46:32 -0500

sarrac (2.19.12b4) unstable; urgency=medium

  * more fix for #83, added attrib event. 
  * dependencies were perhaps broken in b3?

 -- Peter Silva <peter@blacklab>  Wed, 18 Dec 2019 09:26:17 -0500

sarrac (2.19.12b3) unstable; urgency=medium

  * fix: #83 for RCM use case 

 -- Peter Silva <peter@bsqt.homeip.net>  Tue, 17 Dec 2019 23:21:02 -0500

sarrac (2.19.12b2) unstable; urgency=medium

  * now loops forever if binding fails (do not accept failure to bind.)
  * fix: #80 systematic cleanup for problem in #76. minimizing overall risk.
  * improved debian packaging dependencies.

 -- Peter Silva <peter@bsqt.homeip.net>  Sun, 15 Dec 2019 00:28:37 -0500

sarrac (2.19.11b2) unstable; urgency=medium

  * fix: #76  crash with libsrshim and sed command.
  * new: rpm spec files for Suse and Redhat
  * fix: #78 x-expires mispelled, queues never expired.

 -- Peter Silva <peter@idefix>  Tue, 19 Nov 2019 15:39:56 -0500

sarrac (2.19.11b1) unstable; urgency=medium

  * fix: #68 wgrib2 will not post (via libsrshim.)
  * fix: #67 post_exchange_suffix was not working.
  * new: printing hostname in options. 

 -- Peter Silva <peter@blacklab>  Thu, 31 Oct 2019 22:04:30 -0400

sarrac (2.19.10b1) unstable; urgency=medium

  * fix: dependencies should be on metpx-sarracenia, without python3- being mentioned. 
  * fix: usage string, removed reference to *parts*, only *blocksize*

 -- Peter Silva <peter@bsqt.homeip.net>  Tue, 01 Oct 2019 09:21:54 -0400

sarrac (2.19.08b1) unstable; urgency=medium

  * fix: v03 decoding was disabled in last release. 
  * fix: cache check was broken.
  * fix: added source field to v02->v03 conversion.