@@ -567,32 +567,29 @@ struct sr_message_s *sr_consume(struct sr_context *sr_c)
 	amqp_maybe_release_buffers(sr_c->cfg->broker->conn);
 	result = amqp_simple_wait_frame(sr_c->cfg->broker->conn, &frame);
 
-	sr_log_msg( LOG_DEBUG, "wait_frame result: %d\n", result);
 	if (result < 0) {
-		amqp_maybe_release_buffers(sr_c->cfg->broker->conn);
+	    sr_log_msg( LOG_ERROR, "wait_frame bad result: %d. aborting connection.\n", result);
 		return (NULL);
 	}
-	sr_log_msg( LOG_DEBUG, "Frame type %d, channel %d\n", frame.frame_type, frame.channel);
 
 	if (frame.frame_type != AMQP_FRAME_METHOD) {
-		amqp_maybe_release_buffers(sr_c->cfg->broker->conn);
+	    sr_log_msg( LOG_ERROR, "bad FRAME_METHOD: %d. aborting connection.\n", frame.frame_type);
 		return (NULL);
 	}
-	sr_log_msg( LOG_DEBUG, "Method %s\n", amqp_method_name(frame.payload.method.id));
-
 	if (frame.payload.method.id != AMQP_BASIC_DELIVER_METHOD) {
-		amqp_maybe_release_buffers(sr_c->cfg->broker->conn);
+	    sr_log_msg( LOG_ERROR, "bad payload method: %d. aborting connection.\n", frame.payload.method.id );
 		return (NULL);
 	}
 
 	d = (amqp_basic_deliver_t *) frame.payload.method.decoded;
 
-	sr_log_msg(LOG_DEBUG, "consumer_tag: %s, delivery_tag: %ld\n",
+	sr_log_msg( LOG_DEBUG, "Frame type %d, channel %d Method %s consumer_tag: %s, delivery_tag: %ld\n",
+        frame.frame_type, frame.channel, amqp_method_name(frame.payload.method.id), 
     		(char *)d->consumer_tag.bytes, d->delivery_tag);
 
 	sr_c->cfg->broker->last_delivery_tag = d->delivery_tag;
 
-	sr_log_msg( LOG_DEBUG, " \"exchange\": \"%.*s\",\"routingkey\": \"%.*s\",\n",
+	sr_log_msg( LOG_DEBUG, "exchange: \"%.*s\", routingkey: \"%.*s\",\n",
 	   (int) d->exchange.len, (char *) d->exchange.bytes,
 	   (int) d->routing_key.len, (char *) d->routing_key.bytes);
 
@@ -604,12 +601,12 @@ struct sr_message_s *sr_consume(struct sr_context *sr_c)
 	result = amqp_simple_wait_frame(sr_c->cfg->broker->conn, &frame);
 
 	if (result < 0) {
-		sr_log_msg(LOG_ERROR, "error receiving frame!");
+		sr_log_msg(LOG_ERROR, "error receiving frame! aborting connection.");
 		return(NULL);
     }
 
 	if (frame.frame_type != AMQP_FRAME_HEADER) {
-		sr_log_msg(LOG_ERROR, "Expected header!");
+		sr_log_msg(LOG_ERROR, "Expected header! aborting connection.");
 		return(NULL);
 	}
 
@@ -617,7 +614,7 @@ struct sr_message_s *sr_consume(struct sr_context *sr_c)
 
     /* FIXME */
     if (p->_flags & AMQP_BASIC_CONTENT_TYPE_FLAG) {
-	      sr_log_msg(LOG_DEBUG, "Content-type: %.*s  frame.payload.properties.class_id: %d body_size: %d\n", 
+	      sr_log_msg(LOG_DEBUG, "Content-type: %.*s  frame.payload.properties.class_id: %d body_size: %ld\n", 
               (int)p->content_type.len, (char *)p->content_type.bytes, frame.payload.properties.class_id,
                  frame.payload.properties.body_size );
     }
@@ -705,11 +702,12 @@ after_headers:
 	while (body_received < body_target) {
 		result = amqp_simple_wait_frame(sr_c->cfg->broker->conn, &frame);
 
-		if (result < 0)
+		if (result < 0) {
+	        sr_log_msg(LOG_WARNING, "broken message received: wait_frame returned %d. aborting connection.\n",  result );
 			return (NULL);
-
+        }
 		if (frame.frame_type != AMQP_FRAME_BODY) {
-			sr_log_msg(LOG_CRITICAL, "Expected body!");
+			sr_log_msg(LOG_CRITICAL, "Expected body! aborting connection.");
 			abort();
 		}
 
@@ -717,13 +715,13 @@ after_headers:
 			(int)frame.payload.body_fragment.len );
 
 		body_received += frame.payload.body_fragment.len;
-	    sr_log_msg(LOG_DEBUG, "frame received: %lu bytes \n",  frame.payload.body_fragment.len );
+	    sr_log_msg(LOG_DEBUG, "message body frame received: %lu bytes \n",  frame.payload.body_fragment.len );
 
 		buf[body_received] = '\0';
     }
 
     if (body_received != body_target) {
-	    sr_log_msg(LOG_ERROR, "incomplete message, received: %lu bytes, expected: %lu bytes\n",  body_received, body_target );
+	    sr_log_msg(LOG_ERROR, "incomplete message, received: %lu bytes, expected: %lu bytes.\n",  body_received, body_target );
 		return (NULL);
     } else {
 	    sr_log_msg(LOG_DEBUG, "complete message, received: %lu bytes \n",  body_received );
