@@ -1,8 +1,9 @@
 sarrac (2.19.12b5) unstable; urgency=medium
 
-  * work-around for issue #71 (random occasional crash in cpump receiving v03 messages.)
+  * issue #71 fixed (apparent message corruption was just a parsing problem.)
   * improving some error messages.
-  * bugfix Issue #85 when restarting a component if it wasn't running before, it would not restart. 
+  * when a message is corrupted, disconnect and reconnect. 
+  * Issue #85 when restarting a component if it wasn't running before, it would not restart. 
 
  -- Peter Silva <peter@blacklab>  Fri, 20 Dec 2019 21:46:32 -0500
 
